[gd_scene load_steps=2 format=3 uid="uid://cygkxj86l5d7p"]

[ext_resource type="Script" path="res://main.gd" id="1_6rdxw"]

[node name="main" type="Node2D"]
script = ExtResource("1_6rdxw")

[node name="MatrixSize" type="HSlider" parent="."]
offset_left = 409.0
offset_top = 132.0
offset_right = 683.0
offset_bottom = 182.0
min_value = 2.0
max_value = 5.0
value = 2.0

[node name="MatrixSizeText" type="RichTextLabel" parent="."]
offset_left = 481.0
offset_top = 93.0
offset_right = 641.0
offset_bottom = 133.0
text = "Matrix size: 2x3"

[node name="Start" type="Button" parent="."]
offset_left = 415.0
offset_top = 440.0
offset_right = 680.0
offset_bottom = 495.0
text = "Begin!"

[node name="Matrix" type="GridContainer" parent="."]
anchors_preset = -1
offset_left = 446.0
offset_top = 209.0
offset_right = 655.0
offset_bottom = 324.0
grow_horizontal = 2
size_flags_horizontal = 2
size_flags_vertical = 3
columns = 3

[node name="LineEdit" type="LineEdit" parent="Matrix"]
layout_mode = 2

[node name="LineEdit2" type="LineEdit" parent="Matrix"]
layout_mode = 2

[node name="LineEdit3" type="LineEdit" parent="Matrix"]
layout_mode = 2

[node name="LineEdit4" type="LineEdit" parent="Matrix"]
layout_mode = 2

[node name="LineEdit5" type="LineEdit" parent="Matrix"]
layout_mode = 2

[node name="LineEdit6" type="LineEdit" parent="Matrix"]
layout_mode = 2

[node name="text" type="RichTextLabel" parent="."]
offset_left = 367.0
offset_top = 10.0
offset_right = 718.0
offset_bottom = 85.0
text = "If you want to solve a square matrix, just fill out your matrix and leave others blank.
"

[connection signal="value_changed" from="MatrixSize" to="." method="_on_matrix_size_value_changed"]
[connection signal="size_flags_changed" from="MatrixSizeText" to="." method="_on_rich_text_label_size_flags_changed"]
[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="size_flags_changed" from="text" to="." method="_on_rich_text_label_size_flags_changed"]
